Fix misaligned camera

--- a/src/components/mini-site/styles.css
+++ b/src/components/mini-site/styles.css
@@ -26,3 +26,7 @@ footer {
     width: 100%;
     bottom: 0;
 }
+
+{
+    
+}
